--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-<html>
-<head>	
-	<title>Index</title>
-	<meta charset="utf-8" />
+<html lang="es">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="diseño.css">
 </head>
 <body>
-	
-	<form method="POST" action = "materias.php">
-		<p>Digite codigo del estudiante</p>
-		<input type="text" name="codigo">
-		<input type="submit" name="enviar">		
-	</form>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card card-signin my-5">
+          <div class="card-body">
+            <h5 class="card-title text-center">Iniciar Sesion</h5>
+            <form method="POST" action = "materias.php" class="form-signin">
+              <div class="form-label-group">
+                <input type="codigo" name = "codigo" id="inputcodigo" class="form-control" >
+                <label for="inputcodigo">Codigo del Estudiante</label>
+              </div>
+              <input type="submit" name="Ingresar" class = "btn btn-lg btn-primary btn-block text-uppercase"></input>
+              <hr class="my-4">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
